[package]
name = "fp-rs"
version = "0.0.1"
authors = ["Anthony Griffon <anthony@griffon.one>"]
description = "Functional programing in Rust"
readme = "README.md"
repository = "https://github.com/miaxos/fp-rs"
documentation = "https://docs.rs/fp-rs"
license = "MIT"
keywords = ["fp", "functional", "programming", "functor", "haskell"]
categories = ["data-structures"]
edition = "2018"

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = "0.3.16"
